--- a/rpg.html
+++ b/rpg.html
@@ -11,35 +11,39 @@
 body{background:var(--bg);color:var(--text);font-family:'Crimson Pro',Georgia,serif;font-size:16px;padding:0 0 60px;min-height:100vh;}
 body::before{content:'';position:fixed;inset:0;background-image:url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.03'/%3E%3C/svg%3E");pointer-events:none;z-index:9999;opacity:.4;}
 
-/* HEADER */
-.hub-header{padding:18px 16px 12px;border-bottom:1px solid var(--border);background:linear-gradient(180deg,var(--bg) 0%,var(--bg2) 100%);}
-.hub-title{font-family:'Cinzel',serif;font-size:11px;letter-spacing:.2em;color:var(--text3);text-transform:uppercase;margin-bottom:4px;}
-.hub-game{font-family:'Cinzel',serif;font-size:20px;color:var(--gold2);letter-spacing:.06em;margin-bottom:2px;}
-.hub-tagline{font-size:13px;color:var(--text2);font-style:italic;}
-.hub-edit{background:none;border:1px solid var(--border);color:var(--text3);padding:4px 10px;border-radius:3px;font-family:'Cinzel',serif;font-size:8px;letter-spacing:.08em;cursor:pointer;margin-top:8px;}
-.hub-edit:active{border-color:var(--gold);color:var(--gold);}
+.hub-header{padding:18px 16px 14px;border-bottom:1px solid var(--border);background:linear-gradient(180deg,var(--bg) 0%,var(--bg2) 100%);}
+.hub-title{font-family:'Cinzel',serif;font-size:10px;letter-spacing:.2em;color:var(--text3);text-transform:uppercase;margin-bottom:4px;}
+.hub-game{font-family:'Cinzel',serif;font-size:22px;color:var(--gold2);letter-spacing:.06em;margin-bottom:3px;}
+.hub-tagline{font-size:13px;color:var(--text2);font-style:italic;margin-bottom:10px;}
+.hub-actions{display:flex;gap:8px;flex-wrap:wrap;}
+.btn{padding:6px 12px;border:1px solid var(--border2);background:var(--bg3);color:var(--text);border-radius:3px;font-family:'Cinzel',serif;font-size:9px;letter-spacing:.06em;cursor:pointer;transition:all .15s;white-space:nowrap;}
+.btn:active{border-color:var(--gold);color:var(--gold);}
+.btn-gold{background:linear-gradient(135deg,var(--gold3),var(--gold));border-color:var(--gold2);color:#1a1200;font-weight:600;}
+.btn-sm{padding:4px 9px;font-size:8px;}
+.btn-danger{border-color:var(--red);color:var(--red);}
 
-/* STATS ROW */
 .stats-row{display:flex;gap:0;border-bottom:1px solid var(--border);}
-.stat-chip{flex:1;padding:10px 6px;text-align:center;border-right:1px solid var(--border);}
+.stat-chip{flex:1;padding:10px 4px;text-align:center;border-right:1px solid var(--border);}
 .stat-chip:last-child{border-right:none;}
 .stat-num{font-family:'Cinzel',serif;font-size:18px;color:var(--gold);display:block;}
 .stat-label{font-family:'Cinzel',serif;font-size:7px;letter-spacing:.1em;color:var(--text3);text-transform:uppercase;margin-top:2px;display:block;}
 
-/* MODULE GRID */
-.grid{display:grid;grid-template-columns:1fr 1fr;gap:10px;padding:14px;}
+.section-label{font-family:'Cinzel',serif;font-size:9px;letter-spacing:.15em;color:var(--text3);text-transform:uppercase;padding:12px 14px 6px;}
+
+.grid{display:grid;grid-template-columns:1fr 1fr;gap:10px;padding:0 14px;}
 .card{background:var(--bg2);border:1px solid var(--border);border-radius:7px;padding:14px;cursor:pointer;transition:all .15s;position:relative;overflow:hidden;}
 .card::before{content:'';position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,var(--gold3),var(--gold));opacity:0;transition:opacity .2s;}
-.card:active::before{opacity:1;}
+.card:active::before,.card:hover::before{opacity:1;}
 .card:active{border-color:var(--gold3);background:var(--bg3);}
 .card.full{grid-column:1/-1;}
-.card-icon{font-size:26px;margin-bottom:8px;display:block;}
+.card-icon{font-size:24px;margin-bottom:7px;display:block;}
 .card-name{font-family:'Cinzel',serif;font-size:11px;color:var(--gold);letter-spacing:.06em;margin-bottom:4px;}
 .card-desc{font-size:12px;color:var(--text3);line-height:1.4;}
-.card-count{position:absolute;top:10px;right:10px;font-family:'Cinzel',serif;font-size:9px;color:var(--text3);background:var(--bg3);border:1px solid var(--border);border-radius:8px;padding:2px 7px;}
+.card-count{position:absolute;top:10px;right:10px;font-family:'Cinzel',serif;font-size:8px;color:var(--text3);background:var(--bg4);border:1px solid var(--border);border-radius:8px;padding:2px 7px;}
+.card-play{grid-column:1/-1;display:flex;align-items:center;gap:16px;padding:16px;}
+.card-play-arrow{margin-left:auto;font-family:Cinzel,serif;font-size:22px;color:var(--gold);opacity:.45;}
 
-/* DICE ROLLER */
-.dice-row{display:flex;gap:7px;justify-content:center;flex-wrap:wrap;padding:0 14px 4px;}
+.dice-row{display:flex;gap:6px;justify-content:center;flex-wrap:wrap;padding:0 14px 4px;}
 .die{width:44px;height:44px;background:var(--bg2);border:1px solid var(--border2);border-radius:6px;display:flex;flex-direction:column;align-items:center;justify-content:center;cursor:pointer;transition:all .15s;flex-shrink:0;}
 .die:active{border-color:var(--gold);background:var(--bg3);transform:scale(.9);}
 .die-face{font-size:18px;line-height:1;}
@@ -50,7 +54,12 @@ body::before{content:'';position:fixed;inset:0;background-image:url("data:image/
 @keyframes pop{0%{transform:scale(1.5);opacity:.5;}100%{transform:scale(1);opacity:1;}}
 .popping{animation:pop .25s cubic-bezier(.22,1.8,.36,1);}
 
-/* SETTINGS MODAL */
+/* BACKUP BAR */
+.backup-bar{margin:10px 14px 0;background:var(--bg2);border:1px solid var(--border);border-radius:5px;padding:10px 12px;display:flex;align-items:center;gap:8px;flex-wrap:wrap;}
+.backup-label{font-family:'Cinzel',serif;font-size:9px;letter-spacing:.1em;color:var(--text2);flex:1;min-width:80px;}
+.backup-hint{font-size:11px;color:var(--text3);font-style:italic;width:100%;}
+
+/* MODAL */
 .overlay{position:fixed;inset:0;background:rgba(0,0,0,.82);z-index:200;display:none;align-items:flex-end;justify-content:center;}
 .overlay.open{display:flex;}
 .modal{background:var(--bg2);border:1px solid var(--border2);border-top:1px solid var(--gold3);border-radius:8px 8px 0 0;width:100%;max-width:540px;max-height:88vh;overflow-y:auto;padding:18px;padding-bottom:calc(18px + env(safe-area-inset-bottom,0));}
@@ -61,75 +70,86 @@ input[type="text"],select{background:var(--bg3);border:1px solid var(--border);c
 input:focus{border-color:var(--gold);}
 select option{background:var(--bg3);}
 .modal-actions{display:flex;gap:8px;margin-top:14px;justify-content:flex-end;}
-.btn{padding:7px 14px;border:1px solid var(--border2);background:var(--bg3);color:var(--text);border-radius:3px;font-family:'Cinzel',serif;font-size:10px;letter-spacing:.06em;cursor:pointer;}
-.btn:active{border-color:var(--gold);color:var(--gold);}
-.btn-gold{background:linear-gradient(135deg,var(--gold3),var(--gold));border-color:var(--gold2);color:#1a1200;font-weight:600;}
-.section-label{font-family:'Cinzel',serif;font-size:9px;letter-spacing:.15em;color:var(--text3);text-transform:uppercase;padding:0 14px;margin:4px 0 10px;}
+
+.toast{position:fixed;bottom:70px;left:50%;transform:translateX(-50%);background:var(--bg3);border:1px solid var(--gold3);border-radius:4px;padding:8px 18px;font-family:'Cinzel',serif;font-size:10px;color:var(--gold);z-index:999;opacity:0;transition:opacity .3s;pointer-events:none;white-space:nowrap;}
+.toast.show{opacity:1;}
 ::-webkit-scrollbar{width:4px;}::-webkit-scrollbar-track{background:var(--bg);}::-webkit-scrollbar-thumb{background:var(--border2);border-radius:2px;}
 </style>
 </head>
 <body>
 
-<!-- HEADER -->
 <div class="hub-header">
   <div class="hub-title">Chronicle & Forge · RPG Suite</div>
   <div class="hub-game" id="hubGame">My Game</div>
   <div class="hub-tagline" id="hubTagline">Your world awaits</div>
-  <button class="hub-edit" onclick="openSettings()">⚙ Game Settings</button>
+  <div class="hub-actions">
+    <button class="btn" onclick="openSettings()">⚙ Game Settings</button>
+    <button class="btn" onclick="exportData()">↓ Export</button>
+    <button class="btn" id="importBtn">↑ Import</button>
+    <input type="file" id="importFile" accept=".json" style="display:none;" onchange="importData(event)">
+  </div>
 </div>
 
-<!-- STATS -->
 <div class="stats-row">
   <div class="stat-chip"><span class="stat-num" id="statPages">0</span><span class="stat-label">Pages</span></div>
-  <div class="stat-chip"><span class="stat-num" id="statChars">0</span><span class="stat-label">Characters</span></div>
+  <div class="stat-chip"><span class="stat-num" id="statChars">0</span><span class="stat-label">Chars</span></div>
   <div class="stat-chip"><span class="stat-num" id="statCreatures">0</span><span class="stat-label">Creatures</span></div>
   <div class="stat-chip"><span class="stat-num" id="statSessions">0</span><span class="stat-label">Sessions</span></div>
+  <div class="stat-chip"><span class="stat-num" id="statScenes">0</span><span class="stat-label">Scenes</span></div>
 </div>
 
-<!-- MODULE CARDS -->
+<div class="section-label">Create</div>
 <div class="grid">
-
   <div class="card" onclick="nav('rpg-rules')">
     <span class="card-icon">📖</span>
     <div class="card-name">Rulebook</div>
-    <div class="card-desc">Write your rules, mechanics & zine content</div>
-    <div class="card-count" id="countRules">0 pg</div>
+    <div class="card-desc">Write rules, mechanics & zine content</div>
+    <div class="card-count" id="countRules">0 sections</div>
   </div>
-
   <div class="card" onclick="nav('rpg-characters')">
     <span class="card-icon">🧙</span>
     <div class="card-name">Characters</div>
     <div class="card-desc">Sheet designer & player characters</div>
     <div class="card-count" id="countChars">0</div>
   </div>
-
   <div class="card" onclick="nav('rpg-bestiary')">
     <span class="card-icon">🐉</span>
     <div class="card-name">Bestiary</div>
-    <div class="card-desc">Creatures, NPCs, bosses & stat blocks</div>
+    <div class="card-desc">Creatures, NPCs, bosses & factions</div>
     <div class="card-count" id="countBest">0</div>
   </div>
-
   <div class="card" onclick="nav('rpg-campaign')">
     <span class="card-icon">📜</span>
     <div class="card-name">Campaign</div>
     <div class="card-desc">Sessions, factions, threads & timeline</div>
     <div class="card-count" id="countSess">0</div>
   </div>
-
-  <div class="card full" onclick="nav('rpg-play')" style="display:flex;align-items:center;gap:16px;padding:16px;">
-    <span style="font-size:36px;">⚔️</span>
-    <div>
-      <div class="card-name" style="font-size:13px;margin-bottom:4px;">Play Table</div>
-      <div class="card-desc">Dice roller · Encounter tracker · Session notes</div>
-    </div>
-    <div style="margin-left:auto;font-family:Cinzel,serif;font-size:20px;color:var(--gold);opacity:.5;">›</div>
+  <div class="card" onclick="nav('rpg-scenes')">
+    <span class="card-icon">🌳</span>
+    <div class="card-name">Scene Tree</div>
+    <div class="card-desc">Branching narrative & playtest runner</div>
+    <div class="card-count" id="countScenes">0</div>
   </div>
-
+  <div class="card" onclick="nav('rpg-print')">
+    <span class="card-icon">🖨</span>
+    <div class="card-name">Print</div>
+    <div class="card-desc">Character sheets & rulebook layout</div>
+  </div>
 </div>
 
-<!-- DICE ROLLER -->
-<div class="section-label">Quick Roll</div>
+<div class="section-label" style="margin-top:10px;">Play</div>
+<div class="grid">
+  <div class="card card-play full" onclick="nav('rpg-play')">
+    <span style="font-size:34px;">⚔️</span>
+    <div>
+      <div class="card-name" style="font-size:13px;margin-bottom:3px;">Play Table</div>
+      <div class="card-desc">Dice roller · Encounter tracker · Session notes</div>
+    </div>
+    <div class="card-play-arrow">›</div>
+  </div>
+</div>
+
+<div class="section-label" style="margin-top:10px;">Quick Roll</div>
 <div class="dice-row">
   <div class="die" onclick="roll(4)"><div class="die-face">◇</div><div class="die-label">d4</div></div>
   <div class="die" onclick="roll(6)"><div class="die-face">⬡</div><div class="die-label">d6</div></div>
@@ -137,7 +157,7 @@ select option{background:var(--bg3);}
   <div class="die" onclick="roll(10)"><div class="die-face">◉</div><div class="die-label">d10</div></div>
   <div class="die" onclick="roll(12)"><div class="die-face">⬟</div><div class="die-label">d12</div></div>
   <div class="die" onclick="roll(20)"><div class="die-face">△</div><div class="die-label">d20</div></div>
-  <div class="die" onclick="roll2d6()" style="width:52px;"><div class="die-face" style="font-size:13px;font-family:Cinzel,serif;">2d6</div><div class="die-label">2d6</div></div>
+  <div class="die" onclick="roll2d6()" style="width:52px;"><div class="die-face" style="font-size:13px;font-family:Cinzel,serif;">2d6</div><div class="die-label">pool</div></div>
 </div>
 <div class="roll-result">
   <div class="roll-num" id="rollNum">—</div>
@@ -152,9 +172,9 @@ select option{background:var(--bg3);}
     <div class="field"><label>Tagline</label><input type="text" id="inTagline" placeholder="e.g. A kingdom in pieces"></div>
     <div class="field"><label>Dice System</label>
       <select id="inDice">
-        <option value="2d6">2d6 (Powered by the Apocalypse style)</option>
+        <option value="2d6">2d6 (Powered by the Apocalypse)</option>
         <option value="d20">d20 (D&D style)</option>
-        <option value="d6pool">d6 Pool (World of Darkness style)</option>
+        <option value="d6pool">d6 Pool (World of Darkness)</option>
         <option value="custom">Custom</option>
       </select>
     </div>
@@ -165,52 +185,54 @@ select option{background:var(--bg3);}
   </div>
 </div>
 
+<div class="toast" id="toast"></div>
+
 <script>
+'use strict';
 function getData(){try{return JSON.parse(localStorage.getItem('chronicle_ttrpg')||'{}');}catch{return{};}}
-function saveData(d){localStorage.setItem('chronicle_ttrpg',JSON.stringify(d));}
-function nav(module){
-  if(window.parent&&window.parent!==window)window.parent.postMessage({type:'navigate',module},'*');
-  else window.location.href=module+'.html';
-}
+function setData(d){localStorage.setItem('chronicle_ttrpg',JSON.stringify(d));}
+function nav(m){if(window.parent&&window.parent!==window)window.parent.postMessage({type:'navigate',module:m},'*');else window.location.href=m+'.html';}
+
+const $toast=msg=>{const el=document.getElementById('toast');el.textContent=msg;el.classList.add('show');setTimeout(()=>el.classList.remove('show'),2400);};
 
 function loadStats(){
-  const d=getData();
-  const meta=d.meta||{};
+  const d=getData(),meta=d.meta||{};
   document.getElementById('hubGame').textContent=meta.gameTitle||'My Game';
   document.getElementById('hubTagline').textContent=meta.tagline||'Your world awaits';
-  const sections=((d.rules||{}).sections)||[];
-  const words=sections.reduce((a,s)=>a+(s.wordCount||0),0);
+  const words=((d.rules||{}).sections||[]).reduce((a,s)=>a+(s.wordCount||0),0);
   document.getElementById('statPages').textContent=Math.max(0,Math.round(words/250));
   const chars=(d.characters||[]).length;
   const best=(d.bestiary||[]).length;
   const sess=((d.campaign||{}).sessions||[]).length;
+  const scenes=(d.scenes||[]).length;
   document.getElementById('statChars').textContent=chars;
   document.getElementById('statCreatures').textContent=best;
   document.getElementById('statSessions').textContent=sess;
-  document.getElementById('countRules').textContent=sections.length+' sections';
+  document.getElementById('statScenes').textContent=scenes;
+  document.getElementById('countRules').textContent=((d.rules||{}).sections||[]).length+' sections';
   document.getElementById('countChars').textContent=chars+' chars';
   document.getElementById('countBest').textContent=best+' entries';
   document.getElementById('countSess').textContent=sess+' sessions';
+  document.getElementById('countScenes').textContent=scenes+' scenes';
 }
 
-// Dice
+// ── DICE ──
 function roll(sides){
   const r=Math.floor(Math.random()*sides)+1;
   const el=document.getElementById('rollNum');
   el.textContent=r;el.classList.remove('popping');void el.offsetWidth;el.classList.add('popping');
-  const crit=r===sides,fumble=r===1;
-  document.getElementById('rollInfo').textContent=crit?`d${sides} — Critical! Maximum`:(fumble?`d${sides} — Fumble. Minimum`:`d${sides}`);
+  document.getElementById('rollInfo').textContent=r===sides?`d${sides} — Maximum!`:r===1?`d${sides} — Minimum`:`d${sides}`;
 }
 function roll2d6(){
   const a=Math.floor(Math.random()*6)+1,b=Math.floor(Math.random()*6)+1,t=a+b;
   const el=document.getElementById('rollNum');
   el.textContent=t;el.classList.remove('popping');void el.offsetWidth;el.classList.add('popping');
-  document.getElementById('rollInfo').textContent=t>=10?'Full success ✦':t>=7?'Partial success — cost or complication':'Miss — failure or setback';
+  document.getElementById('rollInfo').textContent=t>=10?'Full success ✦':t>=7?'Partial — cost or complication':'Miss — failure or setback';
 }
 
-// Settings modal
+// ── SETTINGS ──
 function openSettings(){
-  const d=getData(),m=d.meta||{};
+  const m=getData().meta||{};
   document.getElementById('inTitle').value=m.gameTitle||'';
   document.getElementById('inTagline').value=m.tagline||'';
   document.getElementById('inDice').value=m.diceSystem||'2d6';
@@ -222,10 +244,45 @@ function saveSettings(){
   d.meta.tagline=document.getElementById('inTagline').value.trim();
   d.meta.diceSystem=document.getElementById('inDice').value;
   d.meta.lastModified=Date.now();
-  saveData(d);closeModal();loadStats();
+  setData(d);closeModal();loadStats();$toast('Settings saved ✦');
 }
 function closeModal(){document.getElementById('modal-settings').classList.remove('open');}
 document.getElementById('modal-settings').addEventListener('click',e=>{if(e.target===document.getElementById('modal-settings'))closeModal();});
+
+// ── BACKUP / RESTORE ──
+function exportData(){
+  const d=getData();
+  // Strip large tileset image data to keep file manageable — maps reference tilesets by ID
+  const exportObj={...d};
+  if(exportObj.tilesets){
+    exportObj.tilesets=exportObj.tilesets.map(ts=>({...ts,imageData:'[image data stripped — re-import tileset PNG]'}));
+  }
+  const blob=new Blob([JSON.stringify(exportObj,null,2)],{type:'application/json'});
+  const url=URL.createObjectURL(blob);
+  const a=document.createElement('a');
+  const title=(d.meta?.gameTitle||'ttrpg').replace(/\s+/g,'-').toLowerCase();
+  a.href=url;a.download=`${title}-backup-${new Date().toISOString().slice(0,10)}.json`;
+  a.click();URL.revokeObjectURL(url);
+  $toast('Backup downloaded ✦');
+}
+document.getElementById('importBtn').addEventListener('click',()=>document.getElementById('importFile').click());
+function importData(e){
+  const file=e.target.files[0];if(!file)return;
+  const reader=new FileReader();
+  reader.onload=ev=>{
+    try{
+      const imported=JSON.parse(ev.target.result);
+      if(!imported||typeof imported!=='object'){$toast('Invalid file');return;}
+      // Merge: keep existing tilesets (since images were stripped on export)
+      const current=getData();
+      imported.tilesets=current.tilesets||[];
+      setData(imported);loadStats();
+      $toast('Data imported ✦ Tilesets kept from device');
+    }catch{$toast('Could not parse file');}
+    e.target.value='';
+  };
+  reader.readAsText(file);
+}
 
 loadStats();
 document.addEventListener('visibilitychange',()=>{if(!document.hidden)loadStats();});
